Finished day 22 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -36,30 +36,32 @@
         "day 18",
         "day 19",
         "day 20",
-        "day 21"
+        "day 21",
+        "day 22"
       ],
       "y": [
-        0.031983,
-        0.278662,
-        0.043979,
-        0.12175,
-        0.13874,
-        1.468946,
-        0.32197,
-        0.051662,
-        0.189559,
-        0.13449,
-        0.08495,
-        0.44084,
-        0.25313,
-        0.05519,
-        14.110473,
-        0.911343,
-        0.09312,
-        0.583042,
-        0.16431,
-        0.12227,
-        0.084266
+        0.249384,
+        0.385384,
+        0.140736,
+        3.50975,
+        0.580258,
+        4.345366,
+        1.71619,
+        0.257843,
+        0.548983,
+        1.1108,
+        0.92963,
+        1.587885,
+        1.83292,
+        0.344213,
+        15.569107,
+        1.006533,
+        0.190296,
+        0.691941,
+        1.81185,
+        1.09937,
+        0.080133,
+        0.00001
       ],
       "name": "Initialization",
       "marker": {
@@ -68,27 +70,28 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.018039773030722937,
-          0.07255144902756937,
-          0.036661083712841956,
-          0.01015,
-          0.061044513266959546,
-          0.24815898187250882,
-          0.1620760071694759,
-          0.02077818461752614,
-          0.029037124840452056,
-          0.045946413352948454,
-          0.0322607268981962,
-          0.1384307783695519,
-          0.008417725345958967,
-          0.038017357877685294,
-          1.6027451751825685,
-          0.2418805636073305,
-          0.02620129386118174,
-          0.11018898146366539,
-          0.06884648792785295,
-          0.019522809736305886,
-          0.04549124579520765
+          2.143469855478252,
+          0.9249303691327287,
+          0.9808942235042452,
+          3.18925,
+          2.1211319735546783,
+          1.1697354409626162,
+          2.9245541104414534,
+          1.0087042676875115,
+          0.899347274422401,
+          2.441297880226827,
+          2.044840039245124,
+          0.8755300216868638,
+          3.1398521668384327,
+          0.9669130472441636,
+          7.452822690581818,
+          1.3484782365359067,
+          0.8513442080521858,
+          1.1021968855059452,
+          4.517774775539392,
+          2.9487652277012493,
+          0.04241523324231522,
+          0.00003
         ]
       }
     },
@@ -115,30 +118,32 @@
         "day 18",
         "day 19",
         "day 20",
-        "day 21"
+        "day 21",
+        "day 22"
       ],
       "y": [
-        0.015323,
-        0.001245,
-        0.461377,
-        773.04987,
-        0.264517,
-        29.258133,
-        24.52321,
-        0.00464,
-        94.29334,
-        1.85862,
-        14.86295,
-        1.652811,
-        134.02907,
-        0.00006,
-        77.04231,
-        0.051286,
-        113.91902,
-        152.7934,
-        1.2851,
-        808.5914,
-        0.078692
+        0.014077,
+        0.001223,
+        0.36541,
+        1339.1854,
+        0.920392,
+        110.05173,
+        84.63581,
+        0.014896,
+        332.5054,
+        5.78325,
+        53.75494,
+        5.46259,
+        480.30713,
+        0.000473,
+        87.01934,
+        0.05198,
+        115.86377,
+        166.70705,
+        1.2858,
+        816.33453,
+        0.068551,
+        1801.5782
       ],
       "name": "Part 1",
       "marker": {
@@ -147,27 +152,28 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.00563937682727444,
-          0.0005233306793987908,
-          0.10377305127536743,
-          8.57825,
-          0.08699871729514182,
-          2.1633819667851086,
-          4.627647729127618,
-          0.002596112478302895,
-          4.717034530450668,
-          0.5648952625044752,
-          1.55749317317926,
-          0.35325601053485317,
-          7.213771175196785,
-          0.00005291502622129181,
-          5.132163356377502,
-          0.01568464229748325,
-          2.81137576318499,
-          5.488832136181528,
-          0.41021230844527323,
-          20.560623889583216,
-          0.04833720447026285
+          0.0047014009614156456,
+          0.0005873423192653489,
+          0.10327720706913023,
+          560.65595,
+          0.2748408050781396,
+          3.1142518067266174,
+          1.9287446966615358,
+          0.007084517203028016,
+          12.792565127814823,
+          0.8329426777996191,
+          2.0727520730661446,
+          0.47256265690382265,
+          29.595892918214176,
+          0.0021652646489517175,
+          41.49935671387911,
+          0.010988302871690423,
+          9.026725462165116,
+          19.436949070695224,
+          0.22013360488576023,
+          20.822037696815364,
+          0.024758067351875423,
+          16.276123461881213
         ]
       }
     },
@@ -194,30 +200,32 @@
         "day 18",
         "day 19",
         "day 20",
-        "day 21"
+        "day 21",
+        "day 22"
       ],
       "y": [
-        0.038371,
-        0.001175,
-        0.474159,
-        21486.133,
-        2.101219,
-        4.114482,
-        23.61379,
-        0.005759,
-        0.109746,
-        25.44361,
-        37.81531,
-        1.477056,
-        1533.7021,
-        5.706909,
-        75.97242,
-        0.050574,
-        0.108237,
-        153.26155,
-        29.9659,
-        877.54535,
-        0.072855
+        0.034275,
+        0.001141,
+        0.382828,
+        45116.492,
+        6.988619,
+        13.279374,
+        83.91378,
+        0.019627,
+        0.282159,
+        85.58591,
+        139.64957,
+        4.804587,
+        5410.9556,
+        15.045971,
+        83.53282,
+        0.050474,
+        0.109343,
+        165.40866,
+        37.83816,
+        897.3624,
+        0.06528,
+        466.80698
       ],
       "name": "Part 2",
       "marker": {
@@ -226,27 +234,28 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.034758516352111565,
-          0.0008468028105763466,
-          0.11027297320286583,
-          173.6155,
-          0.5876299406420677,
-          0.6089375581092032,
-          3.148296867021914,
-          0.001360742076956542,
-          0.014177280557286006,
-          3.953184303431855,
-          3.0224349757935243,
-          0.3687925618338852,
-          23.594862015169742,
-          0.3728427690313972,
-          4.074018120536409,
-          0.00886227532860496,
-          0.026366587397689527,
-          6.3262820331928795,
-          3.4922825011731224,
-          8.601670180121998,
-          0.04127236938921729
+          0.012078372199928265,
+          0.0011560358990965647,
+          0.09147370997177284,
+          7527.40375,
+          1.6744603116643275,
+          0.850471234859828,
+          2.9799133560558437,
+          0.004304134175417853,
+          0.03309624780847517,
+          3.5839323477013343,
+          3.1672839383452818,
+          0.4335510418981831,
+          156.6229633528047,
+          1.9016048969381127,
+          34.055315949486264,
+          0.007950416592858512,
+          0.026510753497401774,
+          18.88333296991108,
+          9.42237894984064,
+          22.81185230910458,
+          0.036580642421914895,
+          9.3412749024745
         ]
       }
     }
