Finished day 23 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -37,31 +37,33 @@
         "day 19",
         "day 20",
         "day 21",
-        "day 22"
+        "day 22",
+        "day 23"
       ],
       "y": [
-        0.249384,
-        0.385384,
-        0.140736,
-        3.50975,
-        0.580258,
-        4.345366,
-        1.71619,
-        0.257843,
-        0.548983,
-        1.1108,
-        0.92963,
-        1.587885,
-        1.83292,
-        0.344213,
-        15.569107,
-        1.006533,
-        0.190296,
-        0.691941,
-        1.81185,
-        1.09937,
-        0.080133,
-        0.00001
+        0.025574,
+        0.284957,
+        0.055076,
+        0.11615,
+        0.132569,
+        1.436623,
+        0.27016,
+        0.049601,
+        0.186212,
+        0.14662,
+        0.08602,
+        0.441794,
+        0.25755,
+        0.062415,
+        14.432515,
+        0.947526,
+        0.090391,
+        0.561499,
+        0.14457,
+        0.12232,
+        0.079581,
+        0.00003,
+        0.06265
       ],
       "name": "Initialization",
       "marker": {
@@ -70,28 +72,29 @@
       "error_y": {
         "type": "data",
         "array": [
-          2.143469855478252,
-          0.9249303691327287,
-          0.9808942235042452,
-          3.18925,
-          2.1211319735546783,
-          1.1697354409626162,
-          2.9245541104414534,
-          1.0087042676875115,
-          0.899347274422401,
-          2.441297880226827,
-          2.044840039245124,
-          0.8755300216868638,
-          3.1398521668384327,
-          0.9669130472441636,
-          7.452822690581818,
-          1.3484782365359067,
-          0.8513442080521858,
-          1.1021968855059452,
-          4.517774775539392,
-          2.9487652277012493,
-          0.04241523324231522,
-          0.00003
+          0.03635025342415096,
+          0.13493205123690974,
+          0.0719642468452218,
+          0.00635,
+          0.0652897215417558,
+          0.22305411175542156,
+          0.055384405747466496,
+          0.026807616436378655,
+          0.027883684405042356,
+          0.04490440512911846,
+          0.04988538463317688,
+          0.10710884727229597,
+          0.013723137396382798,
+          0.05549781324520814,
+          2.183183014333659,
+          0.27141965316461514,
+          0.026049008023339378,
+          0.11639377001798688,
+          0.07617511470290018,
+          0.03781158023674758,
+          0.04230930322045018,
+          0.000045825756949558395,
+          0.05118558879215907
         ]
       }
     },
@@ -119,31 +122,33 @@
         "day 19",
         "day 20",
         "day 21",
-        "day 22"
+        "day 22",
+        "day 23"
       ],
       "y": [
-        0.014077,
-        0.001223,
-        0.36541,
-        1339.1854,
-        0.920392,
-        110.05173,
-        84.63581,
-        0.014896,
-        332.5054,
-        5.78325,
-        53.75494,
-        5.46259,
-        480.30713,
-        0.000473,
-        87.01934,
-        0.05198,
-        115.86377,
-        166.70705,
-        1.2858,
-        816.33453,
-        0.068551,
-        1801.5782
+        0.012766,
+        0.001303,
+        0.337638,
+        765.0472,
+        0.263454,
+        29.889055,
+        21.84964,
+        0.003959,
+        92.75382,
+        1.77537,
+        15.09774,
+        1.62235,
+        134.78546,
+        0.00016,
+        76.9131,
+        0.053744,
+        111.02949,
+        156.7594,
+        1.23365,
+        802.9982,
+        0.071941,
+        1341.9778,
+        0.01851
       ],
       "name": "Part 1",
       "marker": {
@@ -152,28 +157,29 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.0047014009614156456,
-          0.0005873423192653489,
-          0.10327720706913023,
-          560.65595,
-          0.2748408050781396,
-          3.1142518067266174,
-          1.9287446966615358,
-          0.007084517203028016,
-          12.792565127814823,
-          0.8329426777996191,
-          2.0727520730661446,
-          0.47256265690382265,
-          29.595892918214176,
-          0.0021652646489517175,
-          41.49935671387911,
-          0.010988302871690423,
-          9.026725462165116,
-          19.436949070695224,
-          0.22013360488576023,
-          20.822037696815364,
-          0.024758067351875423,
-          16.276123461881213
+          0.016767577165470275,
+          0.001589179347965482,
+          0.13661019638372512,
+          0.19785,
+          0.08493273270064956,
+          2.9684499138902445,
+          1.0312779753296393,
+          0.0018071577130953473,
+          4.6814014270113615,
+          0.5315245733736118,
+          1.401556042546997,
+          0.30800072710953136,
+          4.589819792148708,
+          0.0010606601717798212,
+          4.595133479018425,
+          0.026848334473482734,
+          2.423771969873402,
+          7.371988800808842,
+          0.4117034909980726,
+          17.49369411057596,
+          0.037533244184322766,
+          15.940299004334893,
+          0.004983462651610825
         ]
       }
     },
@@ -201,31 +207,33 @@
         "day 19",
         "day 20",
         "day 21",
-        "day 22"
+        "day 22",
+        "day 23"
       ],
       "y": [
-        0.034275,
-        0.001141,
-        0.382828,
-        45116.492,
-        6.988619,
-        13.279374,
-        83.91378,
-        0.019627,
-        0.282159,
-        85.58591,
-        139.64957,
-        4.804587,
-        5410.9556,
-        15.045971,
-        83.53282,
-        0.050474,
-        0.109343,
-        165.40866,
-        37.83816,
-        897.3624,
-        0.06528,
-        466.80698
+        0.025683,
+        0.001005,
+        0.341858,
+        21044.932,
+        2.084252,
+        4.120362,
+        22.73098,
+        0.004905,
+        0.110188,
+        27.27296,
+        38.60699,
+        1.404771,
+        1536.5645,
+        5.996502,
+        76.53113,
+        0.053443,
+        0.106425,
+        157.42761,
+        32.50413,
+        879.0672,
+        0.070209,
+        384.3467,
+        0.0235
       ],
       "name": "Part 2",
       "marker": {
@@ -234,28 +242,29 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.012078372199928265,
-          0.0011560358990965647,
-          0.09147370997177284,
-          7527.40375,
-          1.6744603116643275,
-          0.850471234859828,
-          2.9799133560558437,
-          0.004304134175417853,
-          0.03309624780847517,
-          3.5839323477013343,
-          3.1672839383452818,
-          0.4335510418981831,
-          156.6229633528047,
-          1.9016048969381127,
-          34.055315949486264,
-          0.007950416592858512,
-          0.026510753497401774,
-          18.88333296991108,
-          9.42237894984064,
-          22.81185230910458,
-          0.036580642421914895,
-          9.3412749024745
+          0.007311772083428207,
+          0.00030310889132455357,
+          0.13812102170198418,
+          53.24845,
+          0.5365917721098596,
+          0.4906588898165406,
+          2.333456908880042,
+          0.0007268252884978617,
+          0.019187142986906616,
+          3.5832795375744833,
+          3.242348347556135,
+          0.21214485866737415,
+          23.27948895544101,
+          0.9182718352405241,
+          3.707553740099256,
+          0.015330148433723687,
+          0.020980969353201963,
+          6.907073713414101,
+          5.823882398031403,
+          11.303598656003317,
+          0.04056212542508093,
+          9.864965481586845,
+          0.004529238346565568
         ]
       }
     }
