Finished day 24 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -38,32 +38,34 @@
         "day 20",
         "day 21",
         "day 22",
-        "day 23"
+        "day 23",
+        "day 24"
       ],
       "y": [
-        0.025574,
-        0.284957,
-        0.055076,
-        0.11615,
-        0.132569,
-        1.436623,
-        0.27016,
-        0.049601,
-        0.186212,
-        0.14662,
-        0.08602,
-        0.441794,
-        0.25755,
-        0.062415,
-        14.432515,
-        0.947526,
-        0.090391,
-        0.561499,
-        0.14457,
-        0.12232,
-        0.079581,
-        0.00003,
-        0.06265
+        0.021556,
+        0.374882,
+        0.04982,
+        0.1103,
+        0.121731,
+        1.291907,
+        0.24387,
+        0.053415,
+        0.163824,
+        0.22246,
+        0.06929,
+        0.390473,
+        0.24627,
+        0.041653,
+        13.523216,
+        0.899972,
+        0.074802,
+        0.611683,
+        0.17788,
+        0.19381,
+        0.062182,
+        0.00001,
+        0.038058,
+        0.146925
       ],
       "name": "Initialization",
       "marker": {
@@ -72,29 +74,30 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.03635025342415096,
-          0.13493205123690974,
-          0.0719642468452218,
-          0.00635,
-          0.0652897215417558,
-          0.22305411175542156,
-          0.055384405747466496,
-          0.026807616436378655,
-          0.027883684405042356,
-          0.04490440512911846,
-          0.04988538463317688,
-          0.10710884727229597,
-          0.013723137396382798,
-          0.05549781324520814,
-          2.183183014333659,
-          0.27141965316461514,
-          0.026049008023339378,
-          0.11639377001798688,
-          0.07617511470290018,
-          0.03781158023674758,
-          0.04230930322045018,
-          0.000045825756949558395,
-          0.05118558879215907
+          0.017319297445335405,
+          0.08092802404606197,
+          0.04839864254294742,
+          0.0149,
+          0.044696307890025884,
+          0.1565824544800603,
+          0.05028912506695657,
+          0.01493051489400148,
+          0.01442472266631147,
+          0.07941294856633897,
+          0.05089851569545029,
+          0.07130132517001347,
+          0.029335134225021025,
+          0.026607493136332913,
+          0.8009695997626879,
+          0.10463871853190872,
+          0.024150010269148967,
+          0.052417581125038575,
+          0.14142851056275746,
+          0.2665943902260511,
+          0.01059081092268196,
+          0.00003,
+          0.02574226944152358,
+          0.004853542520674976
         ]
       }
     },
@@ -123,32 +126,34 @@
         "day 20",
         "day 21",
         "day 22",
-        "day 23"
+        "day 23",
+        "day 24"
       ],
       "y": [
-        0.012766,
-        0.001303,
-        0.337638,
-        765.0472,
-        0.263454,
-        29.889055,
-        21.84964,
-        0.003959,
-        92.75382,
-        1.77537,
-        15.09774,
-        1.62235,
-        134.78546,
-        0.00016,
-        76.9131,
-        0.053744,
-        111.02949,
-        156.7594,
-        1.23365,
-        802.9982,
-        0.071941,
-        1341.9778,
-        0.01851
+        0.008737,
+        0.001629,
+        0.388521,
+        713.1995,
+        0.238326,
+        26.260384,
+        20.84083,
+        0.003616,
+        83.03301,
+        1.53402,
+        13.63434,
+        1.525361,
+        127.1912,
+        0.000044,
+        75.40616,
+        0.051375,
+        106.96472,
+        155.40495,
+        1.1143,
+        743.0563,
+        0.052532,
+        1422.2855,
+        0.017141,
+        20570.66
       ],
       "name": "Part 1",
       "marker": {
@@ -157,29 +162,30 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.016767577165470275,
-          0.001589179347965482,
-          0.13661019638372512,
-          0.19785,
-          0.08493273270064956,
-          2.9684499138902445,
-          1.0312779753296393,
-          0.0018071577130953473,
-          4.6814014270113615,
-          0.5315245733736118,
-          1.401556042546997,
-          0.30800072710953136,
-          4.589819792148708,
-          0.0010606601717798212,
-          4.595133479018425,
-          0.026848334473482734,
-          2.423771969873402,
-          7.371988800808842,
-          0.4117034909980726,
-          17.49369411057596,
-          0.037533244184322766,
-          15.940299004334893,
-          0.004983462651610825
+          0.002804412772756543,
+          0.0006498145889405676,
+          0.0904780750182053,
+          8.3327,
+          0.03255431651870454,
+          0.7304860668151045,
+          0.9342124598291334,
+          0.002144841252866981,
+          1.9307925520560203,
+          0.5883624950657546,
+          0.09424559618358834,
+          0.07797770821843897,
+          4.456043276271002,
+          0.00005161395160225575,
+          1.3237866590444263,
+          0.0064620023986377475,
+          1.4405330492564203,
+          4.870758718025243,
+          0.08265382023838946,
+          0.951569577277458,
+          0.004663472525918844,
+          48.66317799782603,
+          0.005920626571571628,
+          248.0925783315323
         ]
       }
     },
@@ -208,32 +214,34 @@
         "day 20",
         "day 21",
         "day 22",
-        "day 23"
+        "day 23",
+        "day 24"
       ],
       "y": [
-        0.025683,
-        0.001005,
-        0.341858,
-        21044.932,
-        2.084252,
-        4.120362,
-        22.73098,
-        0.004905,
-        0.110188,
-        27.27296,
-        38.60699,
-        1.404771,
-        1536.5645,
-        5.996502,
-        76.53113,
-        0.053443,
-        0.106425,
-        157.42761,
-        32.50413,
-        879.0672,
-        0.070209,
-        384.3467,
-        0.0235
+        0.023091,
+        0.001337,
+        0.390803,
+        19638.19,
+        1.910763,
+        3.989475,
+        20.53297,
+        0.005083,
+        0.099401,
+        22.74384,
+        34.02833,
+        1.317412,
+        1457.107,
+        5.573044,
+        73.77606,
+        0.052082,
+        0.090948,
+        155.37126,
+        31.53358,
+        812.63477,
+        0.050747,
+        333.3394,
+        0.021445,
+        4588.8066
       ],
       "name": "Part 2",
       "marker": {
@@ -242,29 +250,30 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.007311772083428207,
-          0.00030310889132455357,
-          0.13812102170198418,
-          53.24845,
-          0.5365917721098596,
-          0.4906588898165406,
-          2.333456908880042,
-          0.0007268252884978617,
-          0.019187142986906616,
-          3.5832795375744833,
-          3.242348347556135,
-          0.21214485866737415,
-          23.27948895544101,
-          0.9182718352405241,
-          3.707553740099256,
-          0.015330148433723687,
-          0.020980969353201963,
-          6.907073713414101,
-          5.823882398031403,
-          11.303598656003317,
-          0.04056212542508093,
-          9.864965481586845,
-          0.004529238346565568
+          0.003435435780217708,
+          0.00020330027053597362,
+          0.08268836369768126,
+          186.2143,
+          0.2613157437488224,
+          0.13718878480036187,
+          0.3784346946303946,
+          0.0009985043815627457,
+          0.011177964886328827,
+          1.4334704560610936,
+          0.10798047091951396,
+          0.06439043140094657,
+          56.697976648262326,
+          0.3424167152228408,
+          1.2448630795810427,
+          0.006156498680256486,
+          0.005767243362300564,
+          4.437240672347956,
+          2.0759012658602045,
+          0.890019294397599,
+          0.004433541586587407,
+          8.794825687527865,
+          0.005005864061278532,
+          89.6021274655072
         ]
       }
     }
