Finished day 25 of 2015 in Rust, thereby finishing the whole thing :-)

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -39,33 +39,35 @@
         "day 21",
         "day 22",
         "day 23",
-        "day 24"
+        "day 24",
+        "day 25"
       ],
       "y": [
-        0.021556,
-        0.374882,
-        0.04982,
-        0.1103,
-        0.121731,
-        1.291907,
-        0.24387,
-        0.053415,
-        0.163824,
-        0.22246,
-        0.06929,
-        0.390473,
-        0.24627,
-        0.041653,
-        13.523216,
-        0.899972,
-        0.074802,
-        0.611683,
-        0.17788,
-        0.19381,
-        0.062182,
-        0.00001,
-        0.038058,
-        0.146925
+        0.05557,
+        0.51136,
+        0.14272,
+        0.11825,
+        0.30449,
+        1.6286,
+        0.28334,
+        0.08399,
+        0.18163,
+        0.15965,
+        0.07547,
+        0.59727,
+        0.283475,
+        0.1126,
+        18.31692,
+        1.46044,
+        0.09312,
+        0.769825,
+        0.1727,
+        0.130725,
+        0.11217,
+        0.00002,
+        0.74652,
+        2.1914,
+        0.00004
       ],
       "name": "Initialization",
       "marker": {
@@ -74,30 +76,31 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.017319297445335405,
-          0.08092802404606197,
-          0.04839864254294742,
-          0.0149,
-          0.044696307890025884,
-          0.1565824544800603,
-          0.05028912506695657,
-          0.01493051489400148,
-          0.01442472266631147,
-          0.07941294856633897,
-          0.05089851569545029,
-          0.07130132517001347,
-          0.029335134225021025,
-          0.026607493136332913,
-          0.8009695997626879,
-          0.10463871853190872,
-          0.024150010269148967,
-          0.052417581125038575,
-          0.14142851056275746,
-          0.2665943902260511,
-          0.01059081092268196,
-          0.00003,
-          0.02574226944152358,
-          0.004853542520674976
+          0.040100475059530155,
+          0.04778401824878272,
+          0.19106113576549263,
+          0.00855,
+          0.21638348111628114,
+          0.3230070649382146,
+          0.08289224571695472,
+          0.05916668741783673,
+          0.020422098325098722,
+          0.025122111774291588,
+          0.024387990897160837,
+          0.18093297129047542,
+          0.04156461084865345,
+          0.05557724354445801,
+          3.0123767967503667,
+          0.4712392029532348,
+          0.02035700370879762,
+          0.1505498650779867,
+          0.06835068397609492,
+          0.04777155926908813,
+          0.0367525250833191,
+          0.00004,
+          2.0418004808501737,
+          3.5617315866022246,
+          0.00004898979485566356
         ]
       }
     },
@@ -127,33 +130,35 @@
         "day 21",
         "day 22",
         "day 23",
-        "day 24"
+        "day 24",
+        "day 25"
       ],
       "y": [
-        0.008737,
-        0.001629,
-        0.388521,
-        713.1995,
-        0.238326,
-        26.260384,
-        20.84083,
-        0.003616,
-        83.03301,
-        1.53402,
-        13.63434,
-        1.525361,
-        127.1912,
-        0.000044,
-        75.40616,
-        0.051375,
-        106.96472,
-        155.40495,
-        1.1143,
-        743.0563,
-        0.052532,
-        1422.2855,
-        0.017141,
-        20570.66
+        0.02201,
+        0.00223,
+        0.58395,
+        771.3615,
+        0.3869,
+        30.50519,
+        23.6558,
+        0.00969,
+        94.63212,
+        2.40792,
+        14.80168,
+        2.05752,
+        144.83072,
+        0.00007,
+        79.45116,
+        0.07385,
+        112.2796,
+        154.44673,
+        1.20524,
+        799.36066,
+        0.09576,
+        1537.4327,
+        0.0213,
+        21103.441,
+        61.44471
       ],
       "name": "Part 1",
       "marker": {
@@ -162,30 +167,31 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.002804412772756543,
-          0.0006498145889405676,
-          0.0904780750182053,
-          8.3327,
-          0.03255431651870454,
-          0.7304860668151045,
-          0.9342124598291334,
-          0.002144841252866981,
-          1.9307925520560203,
-          0.5883624950657546,
-          0.09424559618358834,
-          0.07797770821843897,
-          4.456043276271002,
-          0.00005161395160225575,
-          1.3237866590444263,
-          0.0064620023986377475,
-          1.4405330492564203,
-          4.870758718025243,
-          0.08265382023838946,
-          0.951569577277458,
-          0.004663472525918844,
-          48.66317799782603,
-          0.005920626571571628,
-          248.0925783315323
+          0.008146097225052006,
+          0.0003132091952673165,
+          0.27919124359478037,
+          5.7222,
+          0.10347873211438184,
+          3.0900074004603937,
+          1.9633132470393002,
+          0.008572450058180567,
+          6.886799401289397,
+          0.7570967742633699,
+          1.2723550627085192,
+          0.6694611158237646,
+          6.770882093706477,
+          0.000045825756949558395,
+          3.784408685171304,
+          0.022084394943036136,
+          2.614168367186781,
+          4.92698572373363,
+          0.14396460120460167,
+          22.581741964970284,
+          0.02585835261574101,
+          44.13646973558828,
+          0.003203123475609393,
+          14.280793863678413,
+          2.394192406407639
         ]
       }
     },
@@ -215,33 +221,35 @@
         "day 21",
         "day 22",
         "day 23",
-        "day 24"
+        "day 24",
+        "day 25"
       ],
       "y": [
-        0.023091,
-        0.001337,
-        0.390803,
-        19638.19,
-        1.910763,
-        3.989475,
-        20.53297,
-        0.005083,
-        0.099401,
-        22.74384,
-        34.02833,
-        1.317412,
-        1457.107,
-        5.573044,
-        73.77606,
-        0.052082,
-        0.090948,
-        155.37126,
-        31.53358,
-        812.63477,
-        0.050747,
-        333.3394,
-        0.021445,
-        4588.8066
+        0.0405,
+        0.00187,
+        0.44253,
+        21310.322,
+        3.24372,
+        4.89321,
+        24.91444,
+        0.00684,
+        0.10696,
+        29.85251,
+        40.28648,
+        1.75793,
+        1563.9406,
+        6.75626,
+        81.3183,
+        0.06977,
+        0.10363,
+        149.51332,
+        31.56279,
+        886.9982,
+        0.09241,
+        363.50815,
+        0.02791,
+        4729.599,
+        0.0
       ],
       "name": "Part 2",
       "marker": {
@@ -250,30 +258,31 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.003435435780217708,
-          0.00020330027053597362,
-          0.08268836369768126,
-          186.2143,
-          0.2613157437488224,
-          0.13718878480036187,
-          0.3784346946303946,
-          0.0009985043815627457,
-          0.011177964886328827,
-          1.4334704560610936,
-          0.10798047091951396,
-          0.06439043140094657,
-          56.697976648262326,
-          0.3424167152228408,
-          1.2448630795810427,
-          0.006156498680256486,
-          0.005767243362300564,
-          4.437240672347956,
-          2.0759012658602045,
-          0.890019294397599,
-          0.004433541586587407,
-          8.794825687527865,
-          0.005005864061278532,
-          89.6021274655072
+          0.017728902955343854,
+          0.00014177446878757826,
+          0.04414773040599029,
+          79.2755,
+          0.6913857993913384,
+          1.4343046750603583,
+          3.290605168111179,
+          0.002226746505554685,
+          0.011340388000416916,
+          3.3409274746543063,
+          4.384220690795572,
+          0.44965975592663393,
+          15.93755889385197,
+          1.426196462062643,
+          5.10978181530288,
+          0.02506874747569172,
+          0.009645522277201998,
+          7.313486644335587,
+          2.7494959154179517,
+          17.034246652185708,
+          0.028587285635400923,
+          10.622404629574229,
+          0.003592339070856202,
+          47.18589420162423,
+          0.0
         ]
       }
     }
