Finished day 7 of 2024 in both Python and Rust

--- a/2024_rust/images/runtimes.html
+++ b/2024_rust/images/runtimes.html
@@ -23,15 +23,17 @@
         "day 3",
         "day 4",
         "day 5",
-        "day 6"
+        "day 6",
+        "day 7"
       ],
       "y": [
-        1.4422396,
-        0.337192,
-        0.0629724,
-        0.9644068,
-        0.3420295,
-        0.37411
+        1.4544544,
+        0.3490261,
+        0.0545851,
+        0.9276956,
+        0.3273127,
+        0.35492,
+        14.652765
       ],
       "name": "Initialization",
       "marker": {
@@ -40,12 +42,13 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.1608717508819991,
-          0.40554617132455023,
-          0.3149688763961296,
-          0.745833658474703,
-          0.37064868004587775,
-          0.06917649094887655
+          0.17931437672601722,
+          0.07220545733384698,
+          0.03358235977399446,
+          0.1301481502006078,
+          0.062373232148975555,
+          0.05944365062813689,
+          2.2462859575474803
         ]
       }
     },
@@ -57,15 +60,17 @@
         "day 3",
         "day 4",
         "day 5",
-        "day 6"
+        "day 6",
+        "day 7"
       ],
       "y": [
-        0.0001605,
-        0.009672,
-        0.45772,
-        3.1795998,
-        0.1193871,
-        0.52481
+        0.0001589,
+        0.0095682,
+        0.4788265,
+        3.16675,
+        0.1211964,
+        0.54097,
+        7.320284
       ],
       "name": "Part 1",
       "marker": {
@@ -74,12 +79,13 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.0003755925318746332,
-          0.0037209133287406646,
-          0.09405501145606049,
-          0.4079936033688646,
-          0.022899576493682166,
-          0.06313622494257952
+          0.00016425830268208637,
+          0.003723026827730373,
+          0.09096213194373771,
+          0.3636395587666446,
+          0.020516022690570408,
+          0.03978648137244609,
+          0.48014589776858435
         ]
       }
     },
@@ -91,15 +97,17 @@
         "day 3",
         "day 4",
         "day 5",
-        "day 6"
+        "day 6",
+        "day 7"
       ],
       "y": [
-        0.0462609,
-        0.3157806,
-        0.4392831,
-        3.2926502,
-        0.1820992,
-        2002.6517
+        0.045826,
+        0.3235522,
+        0.4719149,
+        3.2734787,
+        0.1794016,
+        2031.2262,
+        425.24426
       ],
       "name": "Part 2",
       "marker": {
@@ -108,12 +116,13 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.010334767592452191,
-          0.0510896232481704,
-          0.07714247898784438,
-          0.45054192215587446,
-          0.028633789119849325,
-          96.81614552434371
+          0.014847832299699486,
+          0.048389314679586015,
+          0.09269822537670293,
+          0.41110294697382044,
+          0.02742768414285103,
+          82.16895172869434,
+          19.68808239656424
         ]
       }
     }
