Finished Rust implementation of day 8 of 2024

--- a/2024_rust/images/runtimes.html
+++ b/2024_rust/images/runtimes.html
@@ -24,16 +24,18 @@
         "day 4",
         "day 5",
         "day 6",
-        "day 7"
+        "day 7",
+        "day 8"
       ],
       "y": [
-        1.6106615,
-        0.3125709,
-        0.0548009,
-        0.9326413,
-        0.3404156,
-        0.36921,
-        0.7508379
+        1.4747759,
+        0.3268896,
+        0.0517646,
+        0.9192445,
+        0.3029236,
+        0.31183,
+        0.6714879,
+        0.0430594
       ],
       "name": "Initialization",
       "marker": {
@@ -42,13 +44,14 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.2753505479343558,
-          0.0914994508354559,
-          0.0340564197940711,
-          0.13888546642579278,
-          0.07407262785023891,
-          0.07300267734816307,
-          0.18378401805812716
+          1.1079534368957897,
+          0.10101294408064744,
+          0.018872644934931616,
+          0.1937091663028624,
+          0.03965601824490201,
+          0.03482803612034419,
+          0.08016664246174966,
+          0.011589219630328877
         ]
       }
     },
@@ -61,16 +64,18 @@
         "day 4",
         "day 5",
         "day 6",
-        "day 7"
+        "day 7",
+        "day 8"
       ],
       "y": [
-        0.0001707,
-        0.0100472,
-        0.4593481,
-        3.1391528,
-        0.127621,
-        0.56312,
-        0.7638775
+        0.0001596,
+        0.0107406,
+        0.4478317,
+        3.230646,
+        0.1102281,
+        0.47971,
+        0.7152883,
+        0.0635395
       ],
       "name": "Part 1",
       "marker": {
@@ -79,13 +84,14 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.00007701629697667853,
-          0.005072397082248203,
-          0.08875428246788998,
-          0.4037994533083967,
-          0.02665656802741118,
-          0.08738061341052716,
-          0.23799846185164544
+          0.0000795477215261389,
+          0.0032335849517215395,
+          0.07294665684669857,
+          0.6267737343762907,
+          0.012674045147071248,
+          0.012948162031732534,
+          0.07271639218986321,
+          0.009833589870947405
         ]
       }
     },
@@ -98,16 +104,18 @@
         "day 4",
         "day 5",
         "day 6",
-        "day 7"
+        "day 7",
+        "day 8"
       ],
       "y": [
-        0.0473348,
-        0.3293488,
-        0.4615484,
-        3.2648168,
-        0.1795646,
-        1907.658,
-        1.1142817
+        0.0435978,
+        0.3661407,
+        0.4301078,
+        3.3865664,
+        0.1752918,
+        1865.1411,
+        1.0363053,
+        0.2061201
       ],
       "name": "Part 2",
       "marker": {
@@ -116,13 +124,14 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.014674480193860369,
-          0.07617519976055194,
-          0.09701813107579438,
-          0.40225870671883535,
-          0.02863707399229187,
-          30.16117953726114,
-          0.3422047833901654
+          0.011829559381481626,
+          0.11563518553411845,
+          0.06708538409489803,
+          0.6667490150956658,
+          0.021119225193174097,
+          14.38374037776336,
+          0.0982226179752402,
+          0.02718650889669362
         ]
       }
     }
